syntax = "proto3";

package video;

service VideoService {
  rpc UploadVideo(UploadVideoRequest) returns (UploadVideoResponse);
  rpc GetVideo(GetVideoRequest) returns (GetVideoResponse);
}

message UploadVideoRequest {
  string id = 1;
  bytes data = 2;
}

message UploadVideoResponse {
  bool success = 1;
}

message GetVideoRequest {
  string id = 1;
}

message GetVideoResponse {
  bytes data = 1;
}
